cabal-version:      2.4
name:               hlog
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Riley Chang
maintainer:         rileycki3333@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Control.Log
    exposed-modules: Control.Log.Type, Control.Log.Class

    -- Modules included in this library but not exported.
    other-modules: Test

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, time, mtl, lens, hspec
    hs-source-dirs:   src
    default-language: Haskell2010
